# como

./: .doxygen  COPYING  ChangeLog  README  README.md  Rakefile  configure.ac  do-build  do-install  install.sh
examples/: como_simple.c  como_subcmd.c
man/: Makefile.am  como.3  como.3.txt
sbin/: do-install
src/: Makefile.am  como.c  como.h  mc.c  mc.h  mcc.c  mcc.h  mcs.c
test/: como_config.c  como_options.c  como_subcmd.c  como_type_prim.c  test_como.c  test_como.rb  test_config  test_options  test_subcmd  test_type_prim
test/golden/: config.txt  options.txt  subcmd.txt  type_prim.txt
